SimpAlgParser.py
# Generated from SimpAlg.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class SimpAlgParser ( Parser ):

    grammarFileName = "SimpAlg.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'begin'", "'end.'", "'var'", "'int'", 
                     "'float'", "'if'", "'then'", "'else'", "'endif'", "'repeat'", 
                     "'until'", "'input'", "'print'", "'true'", "'false'", 
                     "':='", "'('", "')'", "':'", "';'", "','", "'.'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'>'", "'>='", "'<'", "'<='", 
                     "'=='", "'!='", "'and'", "'or'", "'!'" ]

    symbolicNames = [ "<INVALID>", "BEGIN", "END", "VAR", "INT", "FLOAT", 
                      "IF", "THEN", "ELSE", "ENDIF", "REPEAT", "UNTIL", 
                      "READ", "WRITE", "TRUE", "FALSE", "ASSIGN", "LPAREN", 
                      "RPAREN", "COLON", "SEMICOLON", "COMMA", "DOT", "ADD", 
                      "SUB", "MUL", "DIV", "MOD", "GT", "GE", "LT", "LE", 
                      "EQ", "NE", "AND", "OR", "NOT", "STRING", "NUMBER", 
                      "IDENTIFIER", "COMMENT", "WS" ]

    RULE_program = 0
    RULE_statement_list = 1
    RULE_statement = 2
    RULE_declaration = 3
    RULE_variable_list = 4
    RULE_t_type = 5
    RULE_assignment = 6
    RULE_io_statement = 7
    RULE_value_list = 8
    RULE_value = 9
    RULE_if_statement = 10
    RULE_repeat_statement = 11
    RULE_expression = 12
    RULE_term = 13
    RULE_factor = 14
    RULE_primary = 15
    RULE_boolean_expression = 16
    RULE_boolean_term = 17
    RULE_boolean_factor = 18
    RULE_boolean_primary = 19

    ruleNames =  [ "program", "statement_list", "statement", "declaration", 
                   "variable_list", "t_type", "assignment", "io_statement", 
                   "value_list", "value", "if_statement", "repeat_statement", 
                   "expression", "term", "factor", "primary", "boolean_expression", 
                   "boolean_term", "boolean_factor", "boolean_primary" ]

    EOF = Token.EOF
    BEGIN=1
    END=2
    VAR=3
    INT=4
    FLOAT=5
    IF=6
    THEN=7
    ELSE=8
    ENDIF=9
    REPEAT=10
    UNTIL=11
    READ=12
    WRITE=13
    TRUE=14
    FALSE=15
    ASSIGN=16
    LPAREN=17
    RPAREN=18
    COLON=19
    SEMICOLON=20
    COMMA=21
    DOT=22
    ADD=23
    SUB=24
    MUL=25
    DIV=26
    MOD=27
    GT=28
    GE=29
    LT=30
    LE=31
    EQ=32
    NE=33
    AND=34
    OR=35
    NOT=36
    STRING=37
    NUMBER=38
    IDENTIFIER=39
    COMMENT=40
    WS=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN(self):
            return self.getToken(SimpAlgParser.BEGIN, 0)

        def statement_list(self):
            return self.getTypedRuleContext(SimpAlgParser.Statement_listContext,0)


        def END(self):
            return self.getToken(SimpAlgParser.END, 0)

        def getRuleIndex(self):
            return SimpAlgParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = SimpAlgParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(SimpAlgParser.BEGIN)
            self.state = 41
            self.statement_list()
            self.state = 42
            self.match(SimpAlgParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Statement_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpAlgParser.StatementContext)
            else:
                return self.getTypedRuleContext(SimpAlgParser.StatementContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(SimpAlgParser.SEMICOLON)
            else:
                return self.getToken(SimpAlgParser.SEMICOLON, i)

        def getRuleIndex(self):
            return SimpAlgParser.RULE_statement_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement_list" ):
                listener.enterStatement_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement_list" ):
                listener.exitStatement_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement_list" ):
                return visitor.visitStatement_list(self)
            else:
                return visitor.visitChildren(self)




    def statement_list(self):

        localctx = SimpAlgParser.Statement_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.statement()
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SimpAlgParser.SEMICOLON:
                self.state = 45
                self.match(SimpAlgParser.SEMICOLON)
                self.state = 46
                self.statement()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(SimpAlgParser.DeclarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(SimpAlgParser.AssignmentContext,0)


        def io_statement(self):
            return self.getTypedRuleContext(SimpAlgParser.Io_statementContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(SimpAlgParser.If_statementContext,0)


        def repeat_statement(self):
            return self.getTypedRuleContext(SimpAlgParser.Repeat_statementContext,0)


        def getRuleIndex(self):
            return SimpAlgParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = SimpAlgParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 57
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SimpAlgParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.declaration()
                pass
            elif token in [SimpAlgParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.assignment()
                pass
            elif token in [SimpAlgParser.READ, SimpAlgParser.WRITE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 54
                self.io_statement()
                pass
            elif token in [SimpAlgParser.IF]:
                self.enterOuterAlt(localctx, 4)
                self.state = 55
                self.if_statement()
                pass
            elif token in [SimpAlgParser.REPEAT]:
                self.enterOuterAlt(localctx, 5)
                self.state = 56
                self.repeat_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(SimpAlgParser.VAR, 0)

        def variable_list(self):
            return self.getTypedRuleContext(SimpAlgParser.Variable_listContext,0)


        def COLON(self):
            return self.getToken(SimpAlgParser.COLON, 0)

        def t_type(self):
            return self.getTypedRuleContext(SimpAlgParser.T_typeContext,0)


        def getRuleIndex(self):
            return SimpAlgParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = SimpAlgParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(SimpAlgParser.VAR)
            self.state = 60
            self.variable_list()
            self.state = 61
            self.match(SimpAlgParser.COLON)
            self.state = 62
            self.t_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(SimpAlgParser.IDENTIFIER)
            else:
                return self.getToken(SimpAlgParser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SimpAlgParser.COMMA)
            else:
                return self.getToken(SimpAlgParser.COMMA, i)

        def getRuleIndex(self):
            return SimpAlgParser.RULE_variable_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable_list" ):
                listener.enterVariable_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable_list" ):
                listener.exitVariable_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_list" ):
                return visitor.visitVariable_list(self)
            else:
                return visitor.visitChildren(self)




    def variable_list(self):

        localctx = SimpAlgParser.Variable_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variable_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(SimpAlgParser.IDENTIFIER)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SimpAlgParser.COMMA:
                self.state = 65
                self.match(SimpAlgParser.COMMA)
                self.state = 66
                self.match(SimpAlgParser.IDENTIFIER)
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class T_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(SimpAlgParser.INT, 0)

        def FLOAT(self):
            return self.getToken(SimpAlgParser.FLOAT, 0)

        def getRuleIndex(self):
            return SimpAlgParser.RULE_t_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT_type" ):
                listener.enterT_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT_type" ):
                listener.exitT_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitT_type" ):
                return visitor.visitT_type(self)
            else:
                return visitor.visitChildren(self)




    def t_type(self):

        localctx = SimpAlgParser.T_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_t_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            _la = self._input.LA(1)
            if not(_la==SimpAlgParser.INT or _la==SimpAlgParser.FLOAT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(SimpAlgParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(SimpAlgParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(SimpAlgParser.ExpressionContext,0)


        def getRuleIndex(self):
            return SimpAlgParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = SimpAlgParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(SimpAlgParser.IDENTIFIER)
            self.state = 75
            self.match(SimpAlgParser.ASSIGN)
            self.state = 76
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Io_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READ(self):
            return self.getToken(SimpAlgParser.READ, 0)

        def LPAREN(self):
            return self.getToken(SimpAlgParser.LPAREN, 0)

        def variable_list(self):
            return self.getTypedRuleContext(SimpAlgParser.Variable_listContext,0)


        def RPAREN(self):
            return self.getToken(SimpAlgParser.RPAREN, 0)

        def WRITE(self):
            return self.getToken(SimpAlgParser.WRITE, 0)

        def value_list(self):
            return self.getTypedRuleContext(SimpAlgParser.Value_listContext,0)


        def getRuleIndex(self):
            return SimpAlgParser.RULE_io_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIo_statement" ):
                listener.enterIo_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIo_statement" ):
                listener.exitIo_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIo_statement" ):
                return visitor.visitIo_statement(self)
            else:
                return visitor.visitChildren(self)




    def io_statement(self):

        localctx = SimpAlgParser.Io_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_io_statement)
        try:
            self.state = 88
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SimpAlgParser.READ]:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.match(SimpAlgParser.READ)
                self.state = 79
                self.match(SimpAlgParser.LPAREN)
                self.state = 80
                self.variable_list()
                self.state = 81
                self.match(SimpAlgParser.RPAREN)
                pass
            elif token in [SimpAlgParser.WRITE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.match(SimpAlgParser.WRITE)
                self.state = 84
                self.match(SimpAlgParser.LPAREN)
                self.state = 85
                self.value_list()
                self.state = 86
                self.match(SimpAlgParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Value_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpAlgParser.ValueContext)
            else:
                return self.getTypedRuleContext(SimpAlgParser.ValueContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SimpAlgParser.COMMA)
            else:
                return self.getToken(SimpAlgParser.COMMA, i)

        def getRuleIndex(self):
            return SimpAlgParser.RULE_value_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue_list" ):
                listener.enterValue_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue_list" ):
                listener.exitValue_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue_list" ):
                return visitor.visitValue_list(self)
            else:
                return visitor.visitChildren(self)




    def value_list(self):

        localctx = SimpAlgParser.Value_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_value_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.value()
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SimpAlgParser.COMMA:
                self.state = 91
                self.match(SimpAlgParser.COMMA)
                self.state = 92
                self.value()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(SimpAlgParser.ExpressionContext,0)


        def STRING(self):
            return self.getToken(SimpAlgParser.STRING, 0)

        def TRUE(self):
            return self.getToken(SimpAlgParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(SimpAlgParser.FALSE, 0)

        def getRuleIndex(self):
            return SimpAlgParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = SimpAlgParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_value)
        try:
            self.state = 102
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SimpAlgParser.LPAREN, SimpAlgParser.ADD, SimpAlgParser.SUB, SimpAlgParser.NUMBER, SimpAlgParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.expression()
                pass
            elif token in [SimpAlgParser.STRING]:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.match(SimpAlgParser.STRING)
                pass
            elif token in [SimpAlgParser.TRUE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 100
                self.match(SimpAlgParser.TRUE)
                pass
            elif token in [SimpAlgParser.FALSE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 101
                self.match(SimpAlgParser.FALSE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(SimpAlgParser.IF, 0)

        def LPAREN(self):
            return self.getToken(SimpAlgParser.LPAREN, 0)

        def boolean_expression(self):
            return self.getTypedRuleContext(SimpAlgParser.Boolean_expressionContext,0)


        def RPAREN(self):
            return self.getToken(SimpAlgParser.RPAREN, 0)

        def THEN(self):
            return self.getToken(SimpAlgParser.THEN, 0)

        def statement_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpAlgParser.Statement_listContext)
            else:
                return self.getTypedRuleContext(SimpAlgParser.Statement_listContext,i)


        def ENDIF(self):
            return self.getToken(SimpAlgParser.ENDIF, 0)

        def ELSE(self):
            return self.getToken(SimpAlgParser.ELSE, 0)

        def getRuleIndex(self):
            return SimpAlgParser.RULE_if_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_statement" ):
                listener.enterIf_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_statement" ):
                listener.exitIf_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_statement" ):
                return visitor.visitIf_statement(self)
            else:
                return visitor.visitChildren(self)




    def if_statement(self):

        localctx = SimpAlgParser.If_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_if_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(SimpAlgParser.IF)
            self.state = 105
            self.match(SimpAlgParser.LPAREN)
            self.state = 106
            self.boolean_expression()
            self.state = 107
            self.match(SimpAlgParser.RPAREN)
            self.state = 108
            self.match(SimpAlgParser.THEN)
            self.state = 109
            self.statement_list()
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SimpAlgParser.ELSE:
                self.state = 110
                self.match(SimpAlgParser.ELSE)
                self.state = 111
                self.statement_list()


            self.state = 114
            self.match(SimpAlgParser.ENDIF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Repeat_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REPEAT(self):
            return self.getToken(SimpAlgParser.REPEAT, 0)

        def statement_list(self):
            return self.getTypedRuleContext(SimpAlgParser.Statement_listContext,0)


        def UNTIL(self):
            return self.getToken(SimpAlgParser.UNTIL, 0)

        def LPAREN(self):
            return self.getToken(SimpAlgParser.LPAREN, 0)

        def boolean_expression(self):
            return self.getTypedRuleContext(SimpAlgParser.Boolean_expressionContext,0)


        def RPAREN(self):
            return self.getToken(SimpAlgParser.RPAREN, 0)

        def getRuleIndex(self):
            return SimpAlgParser.RULE_repeat_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRepeat_statement" ):
                listener.enterRepeat_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRepeat_statement" ):
                listener.exitRepeat_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRepeat_statement" ):
                return visitor.visitRepeat_statement(self)
            else:
                return visitor.visitChildren(self)




    def repeat_statement(self):

        localctx = SimpAlgParser.Repeat_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_repeat_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(SimpAlgParser.REPEAT)
            self.state = 117
            self.statement_list()
            self.state = 118
            self.match(SimpAlgParser.UNTIL)
            self.state = 119
            self.match(SimpAlgParser.LPAREN)
            self.state = 120
            self.boolean_expression()
            self.state = 121
            self.match(SimpAlgParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpAlgParser.TermContext)
            else:
                return self.getTypedRuleContext(SimpAlgParser.TermContext,i)


        def ADD(self, i:int=None):
            if i is None:
                return self.getTokens(SimpAlgParser.ADD)
            else:
                return self.getToken(SimpAlgParser.ADD, i)

        def SUB(self, i:int=None):
            if i is None:
                return self.getTokens(SimpAlgParser.SUB)
            else:
                return self.getToken(SimpAlgParser.SUB, i)

        def getRuleIndex(self):
            return SimpAlgParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = SimpAlgParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.term()
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SimpAlgParser.ADD or _la==SimpAlgParser.SUB:
                self.state = 124
                _la = self._input.LA(1)
                if not(_la==SimpAlgParser.ADD or _la==SimpAlgParser.SUB):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 125
                self.term()
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpAlgParser.FactorContext)
            else:
                return self.getTypedRuleContext(SimpAlgParser.FactorContext,i)


        def MUL(self, i:int=None):
            if i is None:
                return self.getTokens(SimpAlgParser.MUL)
            else:
                return self.getToken(SimpAlgParser.MUL, i)

        def DIV(self, i:int=None):
            if i is None:
                return self.getTokens(SimpAlgParser.DIV)
            else:
                return self.getToken(SimpAlgParser.DIV, i)

        def MOD(self, i:int=None):
            if i is None:
                return self.getTokens(SimpAlgParser.MOD)
            else:
                return self.getToken(SimpAlgParser.MOD, i)

        def getRuleIndex(self):
            return SimpAlgParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)



